--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -31,27 +31,27 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="u3C-O9-t4c">
-                                <rect key="frame" x="20" y="100" width="374" height="567"/>
+                                <rect key="frame" x="0.0" y="100" width="414" height="567"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="title" rowHeight="105" id="Yxf-ke-QAK" customClass="FaqTableViewCell" customModule="accessDenied" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="55.333332061767578" width="334" height="105"/>
+                                        <rect key="frame" x="20" y="55.333332061767578" width="374" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yxf-ke-QAK" id="AU1-DA-yBc">
-                                            <rect key="frame" x="0.0" y="0.0" width="334" height="105"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="105"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jsj-IB-p0n">
-                                                    <rect key="frame" x="20" y="9" width="275" height="83"/>
+                                                    <rect key="frame" x="10" y="9" width="280" height="83"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="275" id="MS4-7S-r6C"/>
+                                                        <constraint firstAttribute="width" constant="280" id="P5A-5a-a9V"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="25"/>
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="luz-aO-wjQ">
-                                                    <rect key="frame" x="311.33333333333331" y="35" width="12.666666666666686" height="35"/>
+                                                    <rect key="frame" x="321.33333333333331" y="35" width="12.666666666666686" height="35"/>
                                                     <color key="tintColor" red="0.83529411764705885" green="0.1764705882352941" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" image="chevron.right" catalog="system"/>
                                                     <connections>
@@ -61,8 +61,8 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="luz-aO-wjQ" secondAttribute="trailing" constant="10" id="0Hv-De-Oea"/>
-                                                <constraint firstItem="jsj-IB-p0n" firstAttribute="leading" secondItem="AU1-DA-yBc" secondAttribute="leading" constant="20" symbolic="YES" id="21C-bO-k9B"/>
+                                                <constraint firstItem="jsj-IB-p0n" firstAttribute="leading" secondItem="AU1-DA-yBc" secondAttribute="leading" constant="10" id="21C-bO-k9B"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="luz-aO-wjQ" secondAttribute="trailing" constant="20" id="2b6-aA-lr3"/>
                                                 <constraint firstItem="jsj-IB-p0n" firstAttribute="top" secondItem="AU1-DA-yBc" secondAttribute="top" constant="9" id="Jaq-cd-rFB"/>
                                                 <constraint firstAttribute="bottom" secondItem="jsj-IB-p0n" secondAttribute="bottom" constant="13" id="aBa-lI-51J"/>
                                                 <constraint firstAttribute="bottom" secondItem="luz-aO-wjQ" secondAttribute="bottom" constant="35" id="ifs-Gf-DHe"/>
@@ -75,25 +75,25 @@
                                             <outlet property="question" destination="jsj-IB-p0n" id="y1F-e2-GYW"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="93" id="njd-rf-uLD" customClass="FaqAnswerTableViewCell" customModule="accessDenied" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="160.33333206176758" width="334" height="93"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="122" id="njd-rf-uLD" customClass="FaqAnswerTableViewCell" customModule="accessDenied" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="160.33333206176758" width="374" height="122"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="njd-rf-uLD" id="jdi-cU-OLk">
-                                            <rect key="frame" x="0.0" y="0.0" width="334" height="93"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="122"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Aqe-eS-irZ">
-                                                    <rect key="frame" x="20" y="11" width="285" height="82"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aqe-eS-irZ">
+                                                    <rect key="frame" x="10" y="3" width="364" height="119"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="top" secondItem="jdi-cU-OLk" secondAttribute="top" constant="11" id="JeL-cp-f4g"/>
-                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="leading" secondItem="jdi-cU-OLk" secondAttribute="leading" constant="20" symbolic="YES" id="TxX-3k-ef4"/>
+                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="top" secondItem="jdi-cU-OLk" secondAttribute="top" constant="3" id="JeL-cp-f4g"/>
+                                                <constraint firstItem="Aqe-eS-irZ" firstAttribute="leading" secondItem="jdi-cU-OLk" secondAttribute="leading" constant="10" id="TxX-3k-ef4"/>
                                                 <constraint firstAttribute="bottom" secondItem="Aqe-eS-irZ" secondAttribute="bottom" id="YpT-ne-HQ9"/>
-                                                <constraint firstAttribute="trailing" secondItem="Aqe-eS-irZ" secondAttribute="trailing" constant="29" id="Yzh-Bm-aqf"/>
+                                                <constraint firstAttribute="trailing" secondItem="Aqe-eS-irZ" secondAttribute="trailing" id="Yzh-Bm-aqf"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -107,15 +107,20 @@
                         <viewLayoutGuide key="safeArea" id="4H4-ZS-KTp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="4H4-ZS-KTp" firstAttribute="trailing" secondItem="u3C-O9-t4c" secondAttribute="trailing" constant="20" id="2L0-LT-ND8"/>
+                            <constraint firstItem="4H4-ZS-KTp" firstAttribute="trailing" secondItem="u3C-O9-t4c" secondAttribute="trailing" id="2L0-LT-ND8"/>
                             <constraint firstItem="rik-6L-4Of" firstAttribute="top" secondItem="4H4-ZS-KTp" secondAttribute="top" id="7nU-Gn-e8t"/>
+                            <constraint firstItem="rik-6L-4Of" firstAttribute="bottom" secondItem="4H4-ZS-KTp" secondAttribute="bottom" id="7yZ-Rh-zjh"/>
                             <constraint firstItem="7ka-Tq-dZC" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" constant="20" id="JK2-8Y-gwg"/>
                             <constraint firstItem="rik-6L-4Of" firstAttribute="trailing" secondItem="4H4-ZS-KTp" secondAttribute="trailing" id="Kqh-O3-IQj"/>
                             <constraint firstItem="4H4-ZS-KTp" firstAttribute="bottom" secondItem="rik-6L-4Of" secondAttribute="bottom" id="RQd-zu-vlA"/>
+                            <constraint firstItem="rik-6L-4Of" firstAttribute="trailing" secondItem="4H4-ZS-KTp" secondAttribute="trailing" id="ZJU-ac-00J"/>
                             <constraint firstItem="4H4-ZS-KTp" firstAttribute="bottom" secondItem="u3C-O9-t4c" secondAttribute="bottom" constant="20" id="cmR-KE-Wrt"/>
                             <constraint firstItem="u3C-O9-t4c" firstAttribute="top" secondItem="7ka-Tq-dZC" secondAttribute="bottom" constant="15" id="dNq-iV-F22"/>
-                            <constraint firstItem="u3C-O9-t4c" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" constant="20" id="g5b-6u-NE0"/>
+                            <constraint firstItem="u3C-O9-t4c" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" id="g5b-6u-NE0"/>
+                            <constraint firstItem="rik-6L-4Of" firstAttribute="top" secondItem="4H4-ZS-KTp" secondAttribute="top" id="hpT-ee-WiW"/>
+                            <constraint firstItem="rik-6L-4Of" firstAttribute="bottom" secondItem="4H4-ZS-KTp" secondAttribute="bottom" id="iyI-xM-IdX"/>
                             <constraint firstItem="4H4-ZS-KTp" firstAttribute="trailing" secondItem="7ka-Tq-dZC" secondAttribute="trailing" constant="20" id="lNE-I8-MSx"/>
+                            <constraint firstItem="rik-6L-4Of" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" id="mKe-Mz-f4I"/>
                             <constraint firstItem="rik-6L-4Of" firstAttribute="leading" secondItem="4H4-ZS-KTp" secondAttribute="leading" id="pRh-bN-IC6"/>
                             <constraint firstItem="7ka-Tq-dZC" firstAttribute="top" secondItem="4H4-ZS-KTp" secondAttribute="top" constant="25" id="ufu-lF-go7"/>
                         </constraints>
@@ -270,9 +275,8 @@
                                                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9o-W3-9Ku">
-                                                    <rect key="frame" x="334" y="36" width="20" height="35"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9o-W3-9Ku">
+                                                    <rect key="frame" x="346.33333333333331" y="36" width="12.666666666666686" height="35"/>
                                                     <color key="tintColor" red="0.83529411764705885" green="0.1764705882352941" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" image="chevron.right" catalog="system">
                                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -286,10 +290,13 @@
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="VG6-Up-pcu" secondAttribute="trailing" constant="14" id="1A1-CS-Bl8"/>
                                                 <constraint firstItem="god-kM-YLv" firstAttribute="leading" secondItem="VG6-Up-pcu" secondAttribute="leading" id="1as-dy-ouI"/>
+                                                <constraint firstItem="o9o-W3-9Ku" firstAttribute="top" secondItem="Jhw-6w-GKY" secondAttribute="top" constant="36" id="4vk-kG-XE1"/>
                                                 <constraint firstItem="god-kM-YLv" firstAttribute="top" secondItem="VG6-Up-pcu" secondAttribute="bottom" constant="14" id="8nT-5K-c7h"/>
                                                 <constraint firstItem="VG6-Up-pcu" firstAttribute="leading" secondItem="VaI-Kj-bZu" secondAttribute="trailing" constant="18" id="It4-Zx-lSM"/>
+                                                <constraint firstAttribute="bottom" secondItem="o9o-W3-9Ku" secondAttribute="bottom" constant="35" id="Sbo-Ts-UWx"/>
                                                 <constraint firstItem="VaI-Kj-bZu" firstAttribute="centerY" secondItem="Jhw-6w-GKY" secondAttribute="centerY" id="Ubl-B7-BkV"/>
                                                 <constraint firstItem="VaI-Kj-bZu" firstAttribute="leading" secondItem="Jhw-6w-GKY" secondAttribute="leading" constant="14" id="Yq6-Ro-Qh9"/>
+                                                <constraint firstItem="o9o-W3-9Ku" firstAttribute="trailing" secondItem="Jhw-6w-GKY" secondAttribute="trailingMargin" constant="5" id="bSf-En-gK3"/>
                                                 <constraint firstItem="VG6-Up-pcu" firstAttribute="top" secondItem="VaI-Kj-bZu" secondAttribute="top" id="cal-MM-SeH"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="god-kM-YLv" secondAttribute="trailing" constant="14" id="iMx-Ac-U7P"/>
                                                 <constraint firstItem="VaI-Kj-bZu" firstAttribute="top" secondItem="Jhw-6w-GKY" secondAttribute="top" constant="14" id="sDD-g8-c4j"/>
