--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -1207,6 +1207,13 @@
                                     <constraint firstItem="ckK-oc-gHM" firstAttribute="leading" secondItem="xfb-rc-gbl" secondAttribute="leading" constant="39.399999999999999" id="wtc-8g-UFr"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hack starts in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xuw-n9-q4O">
+                                <rect key="frame" x="70" y="236" width="282" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.14117647058823529" green="0.14117647058823529" blue="0.14117647058823529" alpha="0.61314747431506844" colorSpace="custom" customColorSpace="calibratedRGB"/>
@@ -1240,11 +1247,12 @@
                         <outlet property="minutes" destination="xp0-Hf-z68" id="OPE-mS-emY"/>
                         <outlet property="register" destination="sNo-fn-oeg" id="gTJ-1I-dc0"/>
                         <outlet property="seconds" destination="0yZ-TR-z6w" id="odP-tu-Xwy"/>
+                        <outlet property="status" destination="Xuw-n9-q4O" id="zIw-Vv-xPJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3540" y="85.007496251874073"/>
+            <point key="canvasLocation" x="-3540.579710144928" y="84.782608695652186"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="mdi-Sv-Yc4">
