--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -1483,7 +1483,7 @@
                                     <constraint firstItem="ckK-oc-gHM" firstAttribute="leading" secondItem="xfb-rc-gbl" secondAttribute="leading" constant="39.399999999999999" id="wtc-8g-UFr"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hack has ended. See you next year." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="k8N-ud-1T4">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hack Starts IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="k8N-ud-1T4">
                                 <rect key="frame" x="20" y="240" width="335" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
