--- a/accessDenied/Base.lproj/Main.storyboard
+++ b/accessDenied/Base.lproj/Main.storyboard
@@ -481,7 +481,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="YMK-mM-ZQ2"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="50"/>
                                 <color key="textColor" red="0.98893800789999997" green="1" blue="0.92868681210000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -2016,10 +2016,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Prizes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vi9-Hq-PxO">
                                 <rect key="frame" x="53" y="25" width="341" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="2qo-bb-VrI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="50"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -2052,6 +2049,7 @@
                             <constraint firstItem="YM4-Rc-JkS" firstAttribute="width" secondItem="KWu-0W-UQg" secondAttribute="width" id="STE-Ee-Jq4"/>
                             <constraint firstItem="KWu-0W-UQg" firstAttribute="trailing" secondItem="Vi9-Hq-PxO" secondAttribute="trailing" constant="20" id="cg7-Mc-uk4"/>
                             <constraint firstItem="3N5-t0-0yc" firstAttribute="top" secondItem="KWu-0W-UQg" secondAttribute="top" constant="44" id="f8L-Dg-JpX"/>
+                            <constraint firstItem="YM4-Rc-JkS" firstAttribute="top" secondItem="Vi9-Hq-PxO" secondAttribute="bottom" constant="15" id="fCV-P3-YM4"/>
                             <constraint firstItem="YM4-Rc-JkS" firstAttribute="top" secondItem="KWu-0W-UQg" secondAttribute="top" constant="100" id="hRF-XK-JAM"/>
                             <constraint firstAttribute="bottom" secondItem="YM4-Rc-JkS" secondAttribute="bottom" id="hf3-jm-qyx"/>
                             <constraint firstItem="Vi9-Hq-PxO" firstAttribute="top" secondItem="KWu-0W-UQg" secondAttribute="top" constant="25" id="z5u-dA-qlH"/>
